# paper_reader

./: .env.example  .env_template  .gitignore  LICENSE  Makefile  README.md  article_processor.py  config.py  extractor.py  input_prompt_for_llms.md  main.py  main_single_file.py  models.py  openai_utils.py  pyproject.toml  requirements.txt  tag_manager.py  utils.py  vector_store.py
paper_reader/: article_processor.py  config.py  models.py  openai_utils.py  prompt_helpers.py  prompts.py  tag_manager.py  utils.py  vector_store.py
prompts/: _md_preference.md  _role_scholar_reviewing.md  article_summary.md  article_summary_short.md  extract_tags.md  pdf_extractor.md  prune_tags.md  readme.md  tag_survey.md  tldr_summary.md  translator.md  update_tags.md
prompts/article_summary/: _htrp_part2.md  how_to_read_paper.md  summary_epilogue.md  summary_full.md  summary_pass1.md  summary_pass2.md  summary_pass3.md  summary_prelogue.md
prompts/tag_survey/: _article1.md  _article2.md  _per_article.md  _tag_requirement.md  instruct.md  prelogue.md
