[project]
name = "paper-reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx[socks]>=0.28.1",
    "loguru>=0.7.3",
    "numpy>=2.2.6",
    "openai>=1.79.0",
    "rich>=14.0.0",
]


# source code.
[tool.setuptools]
packages = ["paper_reader"]
