[project]
name = "paper-reader"
version = "0.1.0"
description = "A tool for extracting, summarizing, and organizing academic papers using AI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv>=1.0.0",
    "httpx[socks]>=0.24.0",
    "loguru>=0.6.0",
    "numpy>=1.20.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.0.0",
]


# source code.
[tool.setuptools]
packages = ["paper_reader"]
